--- a/base_v2.html
+++ b/base_v2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petland - Admin</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="base_v2.css">
     <script src="https://kit.fontawesome.com/72c88d65e7.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
         rel="stylesheet">
